syntax = "proto3";

import "google/protobuf/empty.proto";

package voice_server.v1;

service VoiceServer {
  rpc OpenConnection(OpenConnectionRequest) returns (OpenConnectionResponse) {}
  rpc EstablishSession(EstablishSessionRequest)
      returns (EstablishSessionResponse) {}
  rpc Leave(LeaveRequest) returns (LeaveResponse) {}
  rpc UserStatus(UserStatusRequest) returns (UserStatusResponse) {}
  rpc Status(StatusRequest) returns (StatusResponse) {}
  rpc AssignChannel(AssignChannelRequest) returns (AssignChannelResponse) {}
}

message AssignChannelRequest { string channel_id = 1; }
message AssignChannelResponse {}

message StatusRequest { string channel_id = 1; }

message StatusResponse { repeated ClientInfo info = 1; }

message ClientInfo {
  string client_id = 1;
  uint32 src_id = 2;
  string name = 3;
}

message OpenConnectionRequest {
  string user_name = 1;
  string user_id = 2;
  string channel_id = 3;
}

message OpenConnectionResponse {
  SockAddr udp_sock = 1;
  uint32 src_id = 2;
}

message EstablishSessionRequest {
  string user_id = 1;
  string channel_id = 2;
  SockAddr client_sock = 3;
}

message EstablishSessionResponse {
  bytes crypt_key = 1;
}

message SockAddr {
  string ip = 1;
  uint32 port = 2;
}

message LeaveRequest {
  string user_id = 1;
  string channel_id = 2;
}

message LeaveResponse {
  // Ok / Error
}

message UserStatusRequest {
  string user_id = 1;
  string channel_id = 2;
}

message UserStatusResponse {
  oneof Status {
    google.protobuf.Empty Waiting = 1;
    google.protobuf.Empty Peered = 2;
    google.protobuf.Empty Error = 3;
  }
}
